[tool.poetry]
name = "dotem"
version = "0.1.0"
description = ""
authors = ["Han Hwang Lim <hanhwanglim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.4"

[tool.poetry.scripts]
dotem = "dotem:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
