[tool.poetry]
name = "dotem"
version = "0.1.0"
description = ""
authors = ["Han Hwang Lim <hanhwanglim@gmail.com>"]
readme = "README.md"
include = ["hook.sh"]

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.4"
mypy = "^1.8.0"

[tool.poetry.scripts]
dotem-cli = "dotem:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
